# DM2025-Lab1-Exercise

./: DM2025-Lab1-Homework.ipynb  DM2025-Lab1-Master.ipynb  freq_patterns_sci_med_minSup9.txt  pyproject.toml  td_freq_db_comp_graphics.csv
.ipynb_checkpoints/: DM2025-Lab1-Master-checkpoint.ipynb
